- Fixed bug #34307 (OnUpdateStringUnempty INI options can be set as empty)